syntax = "proto3";
package rpc;

message CreateGameRequest {
  string player_id = 1;
  string game_id = 2;
}

message CreateGameResponse {
  string game_id = 1;
}

service Game  {
  rpc NewGame(CreateGameRequest) returns (CreateGameResponse);
}